--- a/AEON/New Group/Cell/seq_ques_confirm_cell/SecQuesConfirmTableViewCell.xib
+++ b/AEON/New Group/Cell/seq_ques_confirm_cell/SecQuesConfirmTableViewCell.xib
@@ -28,7 +28,7 @@
                                 <color key="textColor" red="0.71764705880000002" green="0.0" blue="0.50588235290000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="0912345678" borderStyle="roundedRect" minimumFontSize="18" translatesAutoresizingMaskIntoConstraints="NO" id="AkQ-pi-0Eq">
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="18" translatesAutoresizingMaskIntoConstraints="NO" id="AkQ-pi-0Eq">
                                 <rect key="frame" x="16" y="41.5" width="390" height="35"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="35" id="liJ-Po-Q9p"/>
